possible fix for zooming in on mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,6 +14,8 @@ body {
   height: 100%;
   width: 100%;
   min-width: 650px;
+  max-width: 100%;
+  // overflow-x: hidden;
 }
 
 // Set background image
