--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,6 +35,7 @@ body {
   height: 100%;
   width: 100%;
   min-width: 650px;
+  max-width: 100%;
 }
 
 body::after {
